@@ -1,10 +1,12 @@
+package com.example.a125project;
+
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 
 public class defaultdict<K, V> extends HashMap<K, V> {
 
-    Class<V> klass;
+    Class<V> dd;
     public defaultdict(Class dd) {
         this.dd = dd;    
     }
@@ -14,7 +16,7 @@ public class defaultdict<K, V> extends HashMap<K, V> {
         V returnValue = super.get(key);
         if (returnValue == null) {
             try {
-                returnValue = dd.newInstance();
+                returnValue = dd.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
